crates/airyc-parser/src/snapshots/airyc_parser__test__assign_statement.snap
---
source: crates/airyc-parser/src/test.rs
assertion_line: 145
expression: try_it(source)
---
COMP_UNIT@0..80
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  FUNC_DEF@5..75
    FUNC_TYPE@5..9
      VOID_KW@5..9 "void"
    NAME@9..14
      WHITESPACE@9..10 " "
      IDENT@10..14 "test"
    L_PAREN@14..15 "("
    R_PAREN@15..16 ")"
    BLOCK@16..75
      WHITESPACE@16..17 " "
      L_BRACE@17..18 "{"
      ASSIGN_STMT@18..33
        INDEX_VAL@18..28
          NAME@18..28
            NEWLINE@18..19 "\n"
            WHITESPACE@19..27 "        "
            IDENT@27..28 "a"
        WHITESPACE@28..29 " "
        EQ@29..30 "="
        LITERAL@30..32
          WHITESPACE@30..31 " "
          INT_LITERAL@31..32 "1"
        SEMI@32..33 ";"
      ASSIGN_STMT@33..49
        UNARY_EXPR@33..44
          UNARY_OP@33..43
            NEWLINE@33..34 "\n"
            WHITESPACE@34..42 "        "
            STAR@42..43 "*"
          INDEX_VAL@43..44
            NAME@43..44
              IDENT@43..44 "p"
        WHITESPACE@44..45 " "
        EQ@45..46 "="
        LITERAL@46..48
          WHITESPACE@46..47 " "
          INT_LITERAL@47..48 "2"
        SEMI@48..49 ";"
      ASSIGN_STMT@49..69
        INDEX_VAL@49..64
          NAME@49..61
            NEWLINE@49..50 "\n"
            WHITESPACE@50..58 "        "
            IDENT@58..61 "arr"
          L_BRACK@61..62 "["
          LITERAL@62..63
            INT_LITERAL@62..63 "0"
          R_BRACK@63..64 "]"
        WHITESPACE@64..65 " "
        EQ@65..66 "="
        LITERAL@66..68
          WHITESPACE@66..67 " "
          INT_LITERAL@67..68 "3"
        SEMI@68..69 ";"
      NEWLINE@69..70 "\n"
      WHITESPACE@70..74 "    "
      R_BRACE@74..75 "}"
  NEWLINE@75..76 "\n"
  WHITESPACE@76..80 "    "
