crates/airyc-parser/src/snapshots/airyc_parser__test__comments.snap
---
source: crates/airyc-parser/src/test.rs
expression: try_it(source)
---
COMP_UNIT@0..173
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  COMMENT_BLOCK@5..25 "/* normal comment */"
  NEWLINE@25..26 "\n"
  WHITESPACE@26..30 "    "
  COMMENT_BLOCK@30..57 "/* comment with * ins ..."
  NEWLINE@57..58 "\n"
  WHITESPACE@58..62 "    "
  COMMENT_BLOCK@62..89 "/* comment with / ins ..."
  NEWLINE@89..90 "\n"
  WHITESPACE@90..94 "    "
  COMMENT_BLOCK@94..122 "/* comment with ** in ..."
  NEWLINE@122..123 "\n"
  WHITESPACE@123..127 "    "
  COMMENT_BLOCK@127..133 "/* **/"
  NEWLINE@133..134 "\n"
  WHITESPACE@134..138 "    "
  COMMENT_BLOCK@138..144 "/****/"
  NEWLINE@144..145 "\n"
  WHITESPACE@145..149 "    "
  COMMENT_BLOCK@149..153 "/**/"
  NEWLINE@153..154 "\n"
  WHITESPACE@154..158 "    "
  VAR_DECL@158..168
    TYPE@158..161
      INT_KW@158..161 "int"
    VAR_DEF@161..167
      INDEX_VAL@161..163
        NAME@161..163
          WHITESPACE@161..162 " "
          IDENT@162..163 "a"
      WHITESPACE@163..164 " "
      EQ@164..165 "="
      INIT_VAL@165..167
        LITERAL@165..167
          WHITESPACE@165..166 " "
          INT_LITERAL@166..167 "1"
    SEMI@167..168 ";"
  NEWLINE@168..169 "\n"
  WHITESPACE@169..173 "    "
