crates/airyc-parser/src/snapshots/airyc_parser__test__complex_mix.snap
---
source: crates/airyc-parser/src/test.rs
expression: try_it(source)
---
COMP_UNIT@0..164
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  CONST_DECL@5..25
    CONST_KW@5..10 "const"
    TYPE@10..14
      WHITESPACE@10..11 " "
      INT_KW@11..14 "int"
    CONST_DEF@14..24
      CONST_INDEX_VAL@14..18
        NAME@14..18
          WHITESPACE@14..15 " "
          IDENT@15..18 "MAX"
      WHITESPACE@18..19 " "
      EQ@19..20 "="
      CONST_INIT_VAL@20..24
        CONST_EXPR@20..24
          LITERAL@20..24
            WHITESPACE@20..21 " "
            INT_LITERAL@21..24 "100"
    SEMI@24..25 ";"
  NEWLINE@25..26 "\n"
  WHITESPACE@26..30 "    "
  VAR_DECL@30..45
    TYPE@30..42
      STRUCT_KW@30..36 "struct"
      NAME@36..42
        WHITESPACE@36..37 " "
        IDENT@37..42 "Point"
    VAR_DEF@42..44
      CONST_INDEX_VAL@42..44
        NAME@42..44
          WHITESPACE@42..43 " "
          IDENT@43..44 "p"
    SEMI@44..45 ";"
  NEWLINE@45..46 "\n"
  NEWLINE@46..47 "\n"
  WHITESPACE@47..51 "    "
  FUNC_DEF@51..159
    FUNC_TYPE@51..54
      TYPE@51..54
        INT_KW@51..54 "int"
    NAME@54..59
      WHITESPACE@54..55 " "
      IDENT@55..59 "main"
    L_PAREN@59..60 "("
    FUNC_F_PARAMS@60..81
      FUNC_F_PARAM@60..68
        TYPE@60..63
          INT_KW@60..63 "int"
        NAME@63..68
          WHITESPACE@63..64 " "
          IDENT@64..68 "argc"
      COMMA@68..69 ","
      FUNC_F_PARAM@69..81
        TYPE@69..73
          WHITESPACE@69..70 " "
          INT_KW@70..73 "int"
        POINTER@73..75
          WHITESPACE@73..74 " "
          STAR@74..75 "*"
        NAME@75..79
          IDENT@75..79 "argv"
        L_BRACK@79..80 "["
        R_BRACK@80..81 "]"
    R_PAREN@81..82 ")"
    BLOCK@82..159
      WHITESPACE@82..83 " "
      L_BRACE@83..84 "{"
      VAR_DECL@84..103
        TYPE@84..96
          NEWLINE@84..85 "\n"
          WHITESPACE@85..93 "        "
          INT_KW@93..96 "int"
        VAR_DEF@96..102
          CONST_INDEX_VAL@96..98
            NAME@96..98
              WHITESPACE@96..97 " "
              IDENT@97..98 "a"
          WHITESPACE@98..99 " "
          EQ@99..100 "="
          INIT_VAL@100..102
            LITERAL@100..102
              WHITESPACE@100..101 " "
              INT_LITERAL@101..102 "1"
        SEMI@102..103 ";"
      VAR_DECL@103..126
        TYPE@103..115
          NEWLINE@103..104 "\n"
          WHITESPACE@104..112 "        "
          INT_KW@112..115 "int"
        VAR_DEF@115..125
          POINTER@115..117
            WHITESPACE@115..116 " "
            STAR@116..117 "*"
          CONST_INDEX_VAL@117..120
            NAME@117..120
              IDENT@117..120 "ptr"
          WHITESPACE@120..121 " "
          EQ@121..122 "="
          INIT_VAL@122..125
            UNARY_EXPR@122..125
              UNARY_OP@122..124
                WHITESPACE@122..123 " "
                AMP@123..124 "&"
              INDEX_VAL@124..125
                NAME@124..125
                  IDENT@124..125 "a"
        SEMI@125..126 ";"
      CONST_DECL@126..153
        NEWLINE@126..127 "\n"
        WHITESPACE@127..135 "        "
        CONST_KW@135..140 "const"
        TYPE@140..144
          WHITESPACE@140..141 " "
          INT_KW@141..144 "int"
        CONST_DEF@144..152
          CONST_INDEX_VAL@144..146
            NAME@144..146
              WHITESPACE@144..145 " "
              IDENT@145..146 "b"
          WHITESPACE@146..147 " "
          EQ@147..148 "="
          CONST_INIT_VAL@148..152
            CONST_EXPR@148..152
              INDEX_VAL@148..152
                NAME@148..152
                  WHITESPACE@148..149 " "
                  IDENT@149..152 "MAX"
        SEMI@152..153 ";"
      NEWLINE@153..154 "\n"
      WHITESPACE@154..158 "    "
      R_BRACE@158..159 "}"
  NEWLINE@159..160 "\n"
  WHITESPACE@160..164 "    "
