crates/airyc-parser/src/snapshots/airyc_parser__test__initializers.snap
---
source: crates/airyc-parser/src/test.rs
expression: try_it(source)
---
COMP_UNIT@0..165
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  VAR_DECL@5..15
    TYPE@5..8
      INT_KW@5..8 "int"
    VAR_DEF@8..14
      CONST_INDEX_VAL@8..10
        NAME@8..10
          WHITESPACE@8..9 " "
          IDENT@9..10 "a"
      WHITESPACE@10..11 " "
      EQ@11..12 "="
      INIT_VAL@12..14
        LITERAL@12..14
          WHITESPACE@12..13 " "
          INT_LITERAL@13..14 "1"
    SEMI@14..15 ";"
  NEWLINE@15..16 "\n"
  WHITESPACE@16..20 "    "
  VAR_DECL@20..35
    TYPE@20..23
      INT_KW@20..23 "int"
    VAR_DEF@23..34
      CONST_INDEX_VAL@23..25
        NAME@23..25
          WHITESPACE@23..24 " "
          IDENT@24..25 "b"
      WHITESPACE@25..26 " "
      EQ@26..27 "="
      INIT_VAL@27..34
        WHITESPACE@27..28 " "
        L_BRACE@28..29 "{"
        INIT_VAL@29..30
          LITERAL@29..30
            INT_LITERAL@29..30 "1"
        COMMA@30..31 ","
        INIT_VAL@31..33
          LITERAL@31..33
            WHITESPACE@31..32 " "
            INT_LITERAL@32..33 "2"
        R_BRACE@33..34 "}"
    SEMI@34..35 ";"
  NEWLINE@35..36 "\n"
  WHITESPACE@36..40 "    "
  VAR_DECL@40..59
    TYPE@40..43
      INT_KW@40..43 "int"
    VAR_DEF@43..58
      CONST_INDEX_VAL@43..45
        NAME@43..45
          WHITESPACE@43..44 " "
          IDENT@44..45 "c"
      WHITESPACE@45..46 " "
      EQ@46..47 "="
      INIT_VAL@47..58
        WHITESPACE@47..48 " "
        L_BRACE@48..49 "{"
        INIT_VAL@49..52
          L_BRACE@49..50 "{"
          INIT_VAL@50..51
            LITERAL@50..51
              INT_LITERAL@50..51 "1"
          R_BRACE@51..52 "}"
        COMMA@52..53 ","
        INIT_VAL@53..57
          WHITESPACE@53..54 " "
          L_BRACE@54..55 "{"
          INIT_VAL@55..56
            LITERAL@55..56
              INT_LITERAL@55..56 "2"
          R_BRACE@56..57 "}"
        R_BRACE@57..58 "}"
    SEMI@58..59 ";"
  NEWLINE@59..60 "\n"
  WHITESPACE@60..64 "    "
  CONST_DECL@64..86
    CONST_KW@64..69 "const"
    TYPE@69..73
      WHITESPACE@69..70 " "
      INT_KW@70..73 "int"
    CONST_DEF@73..85
      CONST_INDEX_VAL@73..76
        NAME@73..76
          WHITESPACE@73..74 " "
          IDENT@74..76 "cb"
      WHITESPACE@76..77 " "
      EQ@77..78 "="
      CONST_INIT_VAL@78..85
        WHITESPACE@78..79 " "
        L_BRACE@79..80 "{"
        CONST_INIT_VAL@80..81
          CONST_EXPR@80..81
            LITERAL@80..81
              INT_LITERAL@80..81 "1"
        COMMA@81..82 ","
        CONST_INIT_VAL@82..84
          CONST_EXPR@82..84
            LITERAL@82..84
              WHITESPACE@82..83 " "
              INT_LITERAL@83..84 "2"
        R_BRACE@84..85 "}"
    SEMI@85..86 ";"
  NEWLINE@86..87 "\n"
  WHITESPACE@87..91 "    "
  CONST_DECL@91..131
    CONST_KW@91..96 "const"
    TYPE@96..100
      WHITESPACE@96..97 " "
      INT_KW@97..100 "int"
    CONST_DEF@100..130
      CONST_INDEX_VAL@100..109
        NAME@100..103
          WHITESPACE@100..101 " "
          IDENT@101..103 "cb"
        L_BRACK@103..104 "["
        CONST_EXPR@104..105
          LITERAL@104..105
            INT_LITERAL@104..105 "2"
        R_BRACK@105..106 "]"
        L_BRACK@106..107 "["
        CONST_EXPR@107..108
          LITERAL@107..108
            INT_LITERAL@107..108 "3"
        R_BRACK@108..109 "]"
      WHITESPACE@109..110 " "
      EQ@110..111 "="
      CONST_INIT_VAL@111..130
        WHITESPACE@111..112 " "
        L_BRACE@112..113 "{"
        CONST_INIT_VAL@113..120
          L_BRACE@113..114 "{"
          CONST_INIT_VAL@114..115
            CONST_EXPR@114..115
              LITERAL@114..115
                INT_LITERAL@114..115 "1"
          COMMA@115..116 ","
          CONST_INIT_VAL@116..117
            CONST_EXPR@116..117
              LITERAL@116..117
                INT_LITERAL@116..117 "2"
          COMMA@117..118 ","
          CONST_INIT_VAL@118..119
            CONST_EXPR@118..119
              LITERAL@118..119
                INT_LITERAL@118..119 "3"
          R_BRACE@119..120 "}"
        COMMA@120..121 ","
        CONST_INIT_VAL@121..129
          WHITESPACE@121..122 " "
          L_BRACE@122..123 "{"
          CONST_INIT_VAL@123..124
            CONST_EXPR@123..124
              LITERAL@123..124
                INT_LITERAL@123..124 "4"
          COMMA@124..125 ","
          CONST_INIT_VAL@125..126
            CONST_EXPR@125..126
              LITERAL@125..126
                INT_LITERAL@125..126 "5"
          COMMA@126..127 ","
          CONST_INIT_VAL@127..128
            CONST_EXPR@127..128
              LITERAL@127..128
                INT_LITERAL@127..128 "6"
          R_BRACE@128..129 "}"
        R_BRACE@129..130 "}"
    SEMI@130..131 ";"
  NEWLINE@131..132 "\n"
  WHITESPACE@132..136 "    "
  CONST_DECL@136..160
    CONST_KW@136..141 "const"
    TYPE@141..145
      WHITESPACE@141..142 " "
      INT_KW@142..145 "int"
    CONST_DEF@145..159
      CONST_INDEX_VAL@145..147
        NAME@145..147
          WHITESPACE@145..146 " "
          IDENT@146..147 "d"
      WHITESPACE@147..148 " "
      EQ@148..149 "="
      CONST_INIT_VAL@149..159
        CONST_EXPR@149..159
          BINARY_EXPR@149..159
            LITERAL@149..151
              WHITESPACE@149..150 " "
              INT_LITERAL@150..151 "1"
            BINARY_OP@151..153
              WHITESPACE@151..152 " "
              PLUS@152..153 "+"
            BINARY_EXPR@153..159
              LITERAL@153..155
                WHITESPACE@153..154 " "
                INT_LITERAL@154..155 "2"
              BINARY_OP@155..157
                WHITESPACE@155..156 " "
                STAR@156..157 "*"
              LITERAL@157..159
                WHITESPACE@157..158 " "
                INT_LITERAL@158..159 "3"
    SEMI@159..160 ";"
  NEWLINE@160..161 "\n"
  WHITESPACE@161..165 "    "
