crates/airyc-parser/src/snapshots/airyc_parser__test__postfix_expressions.snap
---
source: crates/airyc-parser/src/test.rs
expression: try_it(source)
---
COMP_UNIT@0..152
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  VAR_DECL@5..21
    TYPE@5..8
      INT_KW@5..8 "int"
    VAR_DEF@8..20
      INDEX_VAL@8..10
        NAME@8..10
          WHITESPACE@8..9 " "
          IDENT@9..10 "x"
      WHITESPACE@10..11 " "
      EQ@11..12 "="
      INIT_VAL@12..20
        POSTFIX_EXPR@12..20
          INDEX_VAL@12..14
            NAME@12..14
              WHITESPACE@12..13 " "
              IDENT@13..14 "s"
          POSTFIX_OP@14..15
            DOT@14..15 "."
          NAME@15..20
            IDENT@15..20 "field"
    SEMI@20..21 ";"
  NEWLINE@21..22 "\n"
  WHITESPACE@22..26 "    "
  VAR_DECL@26..44
    TYPE@26..29
      INT_KW@26..29 "int"
    VAR_DEF@29..43
      INDEX_VAL@29..31
        NAME@29..31
          WHITESPACE@29..30 " "
          IDENT@30..31 "y"
      WHITESPACE@31..32 " "
      EQ@32..33 "="
      INIT_VAL@33..43
        POSTFIX_EXPR@33..43
          INDEX_VAL@33..35
            NAME@33..35
              WHITESPACE@33..34 " "
              IDENT@34..35 "p"
          POSTFIX_OP@35..37
            ARROW@35..37 "->"
          NAME@37..43
            IDENT@37..43 "member"
    SEMI@43..44 ";"
  NEWLINE@44..45 "\n"
  WHITESPACE@45..49 "    "
  VAR_DECL@49..63
    TYPE@49..52
      INT_KW@49..52 "int"
    VAR_DEF@52..62
      INDEX_VAL@52..54
        NAME@52..54
          WHITESPACE@52..53 " "
          IDENT@53..54 "z"
      WHITESPACE@54..55 " "
      EQ@55..56 "="
      INIT_VAL@56..62
        POSTFIX_EXPR@56..62
          POSTFIX_EXPR@56..60
            INDEX_VAL@56..58
              NAME@56..58
                WHITESPACE@56..57 " "
                IDENT@57..58 "s"
            POSTFIX_OP@58..59
              DOT@58..59 "."
            NAME@59..60
              IDENT@59..60 "a"
          POSTFIX_OP@60..61
            DOT@60..61 "."
          NAME@61..62
            IDENT@61..62 "b"
    SEMI@62..63 ";"
  NEWLINE@63..64 "\n"
  WHITESPACE@64..68 "    "
  VAR_DECL@68..84
    TYPE@68..71
      INT_KW@68..71 "int"
    VAR_DEF@71..83
      INDEX_VAL@71..73
        NAME@71..73
          WHITESPACE@71..72 " "
          IDENT@72..73 "w"
      WHITESPACE@73..74 " "
      EQ@74..75 "="
      INIT_VAL@75..83
        POSTFIX_EXPR@75..83
          POSTFIX_EXPR@75..80
            INDEX_VAL@75..77
              NAME@75..77
                WHITESPACE@75..76 " "
                IDENT@76..77 "p"
            POSTFIX_OP@77..79
              ARROW@77..79 "->"
            NAME@79..80
              IDENT@79..80 "a"
          POSTFIX_OP@80..82
            ARROW@80..82 "->"
          NAME@82..83
            IDENT@82..83 "b"
    SEMI@83..84 ";"
  NEWLINE@84..85 "\n"
  WHITESPACE@85..89 "    "
  VAR_DECL@89..114
    TYPE@89..92
      INT_KW@89..92 "int"
    VAR_DEF@92..113
      INDEX_VAL@92..98
        NAME@92..98
          WHITESPACE@92..93 " "
          IDENT@93..98 "mixed"
      WHITESPACE@98..99 " "
      EQ@99..100 "="
      INIT_VAL@100..113
        POSTFIX_EXPR@100..113
          INDEX_VAL@100..107
            NAME@100..104
              WHITESPACE@100..101 " "
              IDENT@101..104 "arr"
            L_BRACK@104..105 "["
            LITERAL@105..106
              INT_LITERAL@105..106 "0"
            R_BRACK@106..107 "]"
          POSTFIX_OP@107..108
            DOT@107..108 "."
          NAME@108..113
            IDENT@108..113 "field"
    SEMI@113..114 ";"
  NEWLINE@114..115 "\n"
  WHITESPACE@115..119 "    "
  VAR_DECL@119..147
    TYPE@119..122
      INT_KW@119..122 "int"
    VAR_DEF@122..146
      INDEX_VAL@122..130
        NAME@122..130
          WHITESPACE@122..123 " "
          IDENT@123..130 "complex"
      WHITESPACE@130..131 " "
      EQ@131..132 "="
      INIT_VAL@132..146
        POSTFIX_EXPR@132..146
          CALL_EXPR@132..139
            NAME@132..137
              WHITESPACE@132..133 " "
              IDENT@133..137 "func"
            L_PAREN@137..138 "("
            R_PAREN@138..139 ")"
          POSTFIX_OP@139..140
            DOT@139..140 "."
          NAME@140..146
            IDENT@140..146 "member"
    SEMI@146..147 ";"
  NEWLINE@147..148 "\n"
  WHITESPACE@148..152 "    "
