crates/airyc-parser/src/snapshots/airyc_parser__test__struct_decl.snap
---
source: crates/airyc-parser/src/test.rs
assertion_line: 41
expression: try_it(source2)
---
COMP_UNIT@0..15
  VAR_DECL@0..15
    TYPE@0..12
      STRUCT_KW@0..6 "struct"
      NAME@6..12
        WHITESPACE@6..7 " "
        IDENT@7..12 "Point"
    VAR_DEF@12..14
      INDEX_VAL@12..14
        NAME@12..14
          WHITESPACE@12..13 " "
          IDENT@13..14 "p"
    SEMI@14..15 ";"
