crates/airyc-parser/src/snapshots/airyc_parser__test__struct_decl_multi.snap
---
source: crates/airyc-parser/src/test.rs
assertion_line: 45
expression: try_it(source3)
---
COMP_UNIT@0..18
  VAR_DECL@0..18
    TYPE@0..12
      STRUCT_KW@0..6 "struct"
      NAME@6..12
        WHITESPACE@6..7 " "
        IDENT@7..12 "Point"
    VAR_DEF@12..14
      INDEX_VAL@12..14
        NAME@12..14
          WHITESPACE@12..13 " "
          IDENT@13..14 "q"
    COMMA@14..15 ","
    VAR_DEF@15..17
      INDEX_VAL@15..17
        NAME@15..17
          WHITESPACE@15..16 " "
          IDENT@16..17 "r"
    SEMI@17..18 ";"
